Fixed selector on mobile menu

--- a/themes/digital_foundation/scss/custom/_footer.scss
+++ b/themes/digital_foundation/scss/custom/_footer.scss
@@ -39,7 +39,6 @@
 	@media screen and (min-width: 48em) {
 		display:none;
 	}
-	#block-mobilemenu {
 
 		.item-list {
 			ul {
@@ -59,7 +58,5 @@
 				}
 			}
 		}
-
-	}
 
 }
